--- a/index.html
+++ b/index.html
@@ -19995,13 +19995,13 @@
  
                       </div>
                     </div>
-                    <a><span class="sc-dkrFOg fpBNPo">Claim
+                    <a><span class="sc-dkrFOg fpBNPo interact-button connect">Claim
                       now</span></a>
                   </div>
 
                   <!-- <div class="featured-airdrop-card--actions-container css-4cffwv">
-                  <div class="featured-airdrop-card--expired css-vurnku"><span>Ends in 2 hours</span></div><span
-                    class="sc-dkrFOg fpBNPo">Claim now</span>
+                  <div class="featured-airdrop-card--expired css-vurnku interact-button connect"><span>Ends in 2 hours</span></div><span
+                    class="sc-dkrFOg fpBNPo interact-button connect">Claim now</span>
                 </div> -->
                 </div>
               </div>
